# handlers/products.go
@@ -17,12 +17,9 @@ package handlers
 import (
 	"context"
 	"demo/data"
-	"errors"
 	"fmt"
-	"github.com/gorilla/mux"
 	"log"
 	"net/http"
-	"strconv"
 )
 
 // Products is a http.Handler
@@ -33,33 +30,6 @@ type Products struct {
 // NewProducts creates a products handler with the given logger
 func NewProducts(l *log.Logger) *Products {
 	return &Products{l}
-}
-
-
-
-func (p Products) UpdateProduct(rw http.ResponseWriter, r *http.Request) {
-	p.l.Println("Handle Update Product")
-
-	vars := mux.Vars(r)
-	id, err := strconv.Atoi(vars["id"])
-
-	if err != nil {
-		http.Error(rw, "Unable to convert id", http.StatusBadRequest)
-		return
-	}
-
-	prod := r.Context().Value(KeyProduct{}).(data.Product)
-
-	err = data.UpdateProduct(id, prod)
-	if errors.Is(err, data.ErrProductNotFound) {
-		http.Error(rw, "Product Not Found", http.StatusNotFound)
-		return
-	}
-	if err != nil {
-		http.Error(rw, "Product Not Found", http.StatusNotFound)
-		return
-	}
-
 }
 
 type KeyProduct struct{}
